fix filter dropdown z-index (#8623)

--- a/superset/assets/stylesheets/superset.less
+++ b/superset/assets/stylesheets/superset.less
@@ -358,7 +358,7 @@ table.table-no-hover tr:hover {
 }
 
 .Select-menu-outer {
-    z-index: 10 !important;
+    z-index: @z-index-dropdown !important;
 }
 
 /** not found record **/
